--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<header>
 								<div class="title">
 									<h2><a href="HBO.html">HBO MAX Case Study</a></h2>
-									<p>October 22, 2015</p>
+									<p>April 22, 2023</p>
 								</div>
 								<div class="meta">
 									<a href="#" class="author">
@@ -53,7 +53,7 @@
 								  </div>
 								</header>
 								<a href="HBO.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<p>Mauris nue quam, fermentum ut nisl vitae, convallis madasdimus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Cras vehicula tellus eu ligula viverra, ac fringilla turpis suscipit. Quisque vestibulum rhoncus ligula.</p>
+								<p>Improvements are made to help users find new content.</p>
 								<footer>
 									<ul class="actions">
 										<li><a href="HBO.html" class="button large">Continue Reading</a></li>
@@ -75,7 +75,7 @@
 								  </div>
 							</header>
 							<a href="Canvas.html" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-							<p>Mauris nue quam, fermentum ut nisl vitae, convallis madasdimus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Cras vehicula tellus eu ligula viverra, ac fringilla turpis suscipit. Quisque vestibulum rhoncus ligula.</p>
+							<p>Time on task is improved on the canvas app.</p>
 							<footer>
 								<ul class="actions">
 									<li><a href="Canvas.html" class="button large">Continue Reading</a></li>
@@ -125,9 +125,9 @@
 <!-- Footer -->
 <section id="footer">
 	<ul class="icons">
-		<li><a href="www.linkedin.com/in/Jacobzacarias" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-    <li><a href="mailto:jacobrz030@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-	<li><a href= "https://github.com/Jacob-Zac" class="fab fa-github"><span class="label">Github</span></a></li>
+		<li><a target="_blank" href="https://www.linkedin.com/in/jacobzacarias/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+    <li><a target="_blank" href="mailto:jacobrz030@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+	<li><a target="_blank" href= "https://github.com/Jacob-Zac" class="fab fa-github"><span class="label">Github</span></a></li>
 	</ul>
 </section>
 
