--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 									  </div>
 								</header>
 								<a href="Tierra.html" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<p>Mauris nue quam, fermentum ut nisl vitae, convallis madasdimus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Cras vehicula tellus eu ligula viverra, ac fringilla turpis suscipit. Quisque vestibulum rhoncus ligula.</p>
+								<p>Tierra Mia website gets an update to its IA leading to an increase in site traffic.</p>
 								<footer>
 									<ul class="actions">
 										<li><a href="Tierra.html" class="button large">Continue Reading</a></li>
