--- a/HBO.html
+++ b/HBO.html
@@ -84,6 +84,7 @@
 									  </div>
 								</header>
 								<span class="image featured"><img src="images/persona.jpg" alt="" /></span>
+								<span class="image featured"><img src="images/did.jpg" alt="" /></span><br> 
 								<H1>THE PROBLEM</H1>
 								<p>HBO’s current UI does not provide enough information within the preview sections of its content and lacks diversity in their categories sections. This deters users from browsing/viewing the content within this streaming platform. How can we improve the UI and overall user experience in a simple and organized way to encourage users to engage with this platform more often?
 									That's where we come in!
@@ -92,6 +93,7 @@
 								<h1>THE GOAL</h1>
 								<P>How can we improve HBO’s UI to accommodate user search for new content?</P>
 								<h1>THE PROCESS</h1>
+								<span class="image featured"><img src="images/time.png" alt="" /></span><br> 
 								<p>First off, we aimed to understand our stakeholders, users and existing solutions. To holistically understand the problem space and our user needs, my team member and I created a research plan that incorporated the following methods.<br>
 									<br>
 									For week 1 we decided to divide our research into two phases: a research phase where we understood the context of the problem through an in-depth review and a secondary research phase where we conducted 5 user 1 on 1 interviews. We synthesized the collected data into an affinity map that helped us build a user flow, a user persona, a journey map, and design concepts.</p>
@@ -129,13 +131,17 @@
 								  
 								  <p>5. Is there anything you would change or add?</p>
 								  <p>6. Do you have anything else you’d like to share about this topic?</p>
+								  <span class="image featured"><img src="images/notes.jpg" alt="" /></span><br> 
 								  <h1>FINDINGS</h1>
 								  <p>Based on the affinity map, we generated the following insights by grouping similar notes from our separate research. My partner was able to complete the affinity map from the research she collected to the left while I completed an affinity map focused on the interviews to the right.</p>
 								  <h1>USER PERSONA</h1>
 								  <p>After creating the affinity map we were able to narrow down our research question to focus on the issues with searching for content. We then created a persona that captured the essence of the users we've researched and interviewed. We also formed a journey map to understand their needs and frustrations.</p>
+								  <span class="image featured"><img src="images/person.png" alt="" /></span><br> 
 								  <h1>JOURNEY MAP</h1>
+								  <span class="image featured"><img src="images/journey.png" alt="" /></span><br> 
 								  <h1>USER FLOW</h1>
 								  <p>After creating the User Persona and Journey Map a User Flow was created to find any inconsistencies in the search process. The User flow also helps highlight the issue that our persona faces in their journey map above once they search for content.</p>
+								  <span class="image featured"><img src="images/user.png" alt="" /></span><br> 
 								  <h1>CARD SORT</h1>
 								  <p>A Hybrid card sort hosted on Mural was sent out to 5 different participants.  In the card sort there was 34 set categories from HBO and 20 new optional categories. Each participant was asked to put each category they believe that should be used in a separate bucket. There was also 3 unique buckets that contained Add Category, Get Rid of Category, and Group Together. Participants also had the option of creating their own category.</p>
 								  <br><p>Results: Out of the 54 categories 19 Categories were chosen consistently throughout the 5 participants. I only accepted categories that scored at 80% or higher which gave us the list below. I also decided to showcase the 14 rejected categories that scored less than or equal to 20%.</p>
@@ -185,7 +191,7 @@
 									<p>With the recommendations and the UMUX scores we were able to decide that the prototype did not need a second iteration. Since the recommendations we received in our qualitative interviews can be applied for a better user experience we also had to be aware that more research would have to be done. The hover preview limit and shorter clips recommendation would be a whole study in itself. </p>
 									<head>
 										<button onclick="window.open('https://pitchdeck.hypermatic.com/slides/lg2j7lr174247/?token=VjZHMlMyOGVzUjJqX3M%3D', '_blank')">Slides</button>
-									<br><p>Check out my interactive prototype in the slides!</p>		
+									<br><br><p>Check out my interactive prototype in the slides!</p>		
 									
 
 								</article>
