--- a/HBO.html
+++ b/HBO.html
@@ -134,6 +134,7 @@
 								  <span class="image featured"><img src="images/notes.jpg" alt="" /></span><br> 
 								  <h1>FINDINGS</h1>
 								  <p>Based on the affinity map, we generated the following insights by grouping similar notes from our separate research. My partner was able to complete the affinity map from the research she collected to the left while I completed an affinity map focused on the interviews to the right.</p>
+								  <span class="image featured"><img src="images/affinity.jpg" alt="" /></span><br> 
 								  <h1>USER PERSONA</h1>
 								  <p>After creating the affinity map we were able to narrow down our research question to focus on the issues with searching for content. We then created a persona that captured the essence of the users we've researched and interviewed. We also formed a journey map to understand their needs and frustrations.</p>
 								  <span class="image featured"><img src="images/person.png" alt="" /></span><br> 
@@ -144,12 +145,16 @@
 								  <span class="image featured"><img src="images/user.png" alt="" /></span><br> 
 								  <h1>CARD SORT</h1>
 								  <p>A Hybrid card sort hosted on Mural was sent out to 5 different participants.  In the card sort there was 34 set categories from HBO and 20 new optional categories. Each participant was asked to put each category they believe that should be used in a separate bucket. There was also 3 unique buckets that contained Add Category, Get Rid of Category, and Group Together. Participants also had the option of creating their own category.</p>
+								  <span class="image featured"><img src="images/card.png" alt="" /></span><br> 
 								  <br><p>Results: Out of the 54 categories 19 Categories were chosen consistently throughout the 5 participants. I only accepted categories that scored at 80% or higher which gave us the list below. I also decided to showcase the 14 rejected categories that scored less than or equal to 20%.</p>
+								  <span class="image featured"><img src="images/list.png" alt="" /></span><br> 
 								  <h1>PROTOTYPE</h1>
 								  <p>Using our acquired user needs and design implications from our findings, we developed our first iteration of a prototype to answer our research question.
 									How can we improve HBO’s UI to accommodate user search for new content?
 									We created a little mockup sketch to envision what the hover preview would look like. We also took into account one major flaw HBO Max has that involves with their slow load ups. With online research we found that out of all the services HBO Max has a slow load up due to the title card size and fidelity.</p>
+									<span class="image featured"><img src="images/bars.png" alt="" /></span><br> 
 									<br> <p>This sizing difference creates a slower load up which can cause issue for HBO's site if there's a poor connection. Since adding pre loaded titles doesn't solve our main question and we have no contact with the software engineering team we can take this into account and limit our preview size.</p>
+									<span class="image featured"><img src="images/example.jpg" alt="" /></span><br> 	
 									<br><p>Amazon prime contains multiple versions of a preview feature that showcase the movies they hold. One version fits the same horizontal title card image that HBO MAX contains. We decided to extend it out 2.5 times its usual size so the users can see the trailer and read the key descriptives HBO has listed on their content page below.</p>
 									<style>
 										ul {
