--- a/HBO.html
+++ b/HBO.html
@@ -132,7 +132,7 @@
 								  <h1>USER PERSONA</h1>
 								  <p>After creating the affinity map we were able to narrow down our research question to focus on the issues with searching for content. We then created a persona that captured the essence of the users we've researched and interviewed. We also formed a journey map to understand their needs and frustrations.</p>
 								  <span class="image featured"><img src="images/person.png" alt="" /></span><br> 
-								  <h1>JOURNEY MAP</h1>
+								  <h1>JOURNEY MAP</h1><br>
 								  <span class="image featured"><img src="images/journey.png" alt="" /></span><br> 
 								  <h1>USER FLOW</h1>
 								  <p>After creating the User Persona and Journey Map a User Flow was created to find any inconsistencies in the search process. The User flow also helps highlight the issue that our persona faces in their journey map above once they search for content.</p>
