--- a/Canvas.html
+++ b/Canvas.html
@@ -108,8 +108,8 @@
 									 The subject will either do the old design and then the redesign or vice versa through Figma. They will complete a timed and recorded task of reviewing 3 annotations/comments on the homework page.
 									  Once the timed and recorded task is completed they will complete a different design. In the end, they will be debriefed with a question if they had a preference between the two workflows and why. 
 									  The study will be done remotely through Zoom and screen recorded.</p>
-									 <span class="image featured"><img src="images/TimeCan.jpg" alt="" /></span><br> 
-									 <span class="video"><video src="videos/CanMov.mov" controls></video></span><br>
+									  <span class="image featured" style="display: flex; justify-content: center; align-items: center;" ><img src="images/TimeCan.jpg" alt=""style="width: 60%;" /></span><br> 				
+									<span class="video" style="display: flex; justify-content: center; align-items: center;" ><video src="videos/CanMov.mov" alt=""style="width: 40%;" controls></video></span><br> 
 								<p> A recording of one of the design workflows participants completed on Figma.</p>
 								<h1>ANALYSIS</h1>
 								<p>Hypothesis 1: I ran a within-subjects t-test using a t (Log) Confidence Interval for the time comparison.
@@ -120,9 +120,9 @@
 								<h1>RECOMMENDATIONS</h1>
 								<p>I recommend implementing the Redesign as there was a significant reduction of time. The important changes highlighted in the redesigned work flow at the top showed that by increasing the blue icon size allowed for participants to find the comments faster. Another change that decreased task time was taking out the comment page from the workflow so it allowed users to view multiple comments and gave the participants the option to swipe up and view the comment page. </p>
 								<h1>CANVAS RESEARCH PLAN</h1>
-								<button onclick="window.open('https://drive.google.com/file/d/1PypEkZ9JcNnVqjnxs6FqjhnycQ3xND5N/viewfile/d/1FAWEegv4DffcqqojYk0gFyVF9ryYnP5Z/viewhttps://drive.ghttps://drive.google.com/file/d/1PypEkZ9JcNnVqjnxs6FqjhnycQ3xND5N/view?usp=sharingoogle.com/file/d/1PypEkZ9JcNnVqjnxs6FqjhnycQ3xND5N/view', '_blank')">Research Plan</button>							
+								<button onclick="window.open('https://drive.google.com/file/d/1PypEkZ9JcNnVqjnxs6FqjhnycQ3xND5N/view?usp=sharing', '_blank')">Research Plan</button>							
 								<br><br><h1>RESEARCH REPORT</h1>
-								<button onclick="window.open('https://drive.google.com/filehttps://docs.google.com/presentation/d/1d8fzHdEaHDEUgpd2DdEfQ3Y0Hj_zJ-b6/edit?usp=sharing&ouid=114206396100833186383&rtpof=true&sd=true/d/1PypEkZ9JcNnVqjnxs6FqjhnycQ3xND5N/viewfile/d/1FAWEegv4DffcqqojYk0gFyVF9ryYnP5Z/viewhttps://drive.ghttps://drive.google.com/file/d/1PypEkZ9JcNnVqjnxs6FqjhnycQ3xND5N/view?usp=sharingoogle.com/file/d/1PypEkZ9JcNnVqjnxs6FqjhnycQ3xND5N/view', '_blank')">Slides</button>							
+								<button onclick="window.open('https://drive.google.com/file/d/1d8fzHdEaHDEUgpd2DdEfQ3Y0Hj_zJ-b6/view', '_blank')">Slides</button>							
 	
 							</div>
 
