--- a/HBO.html
+++ b/HBO.html
@@ -84,7 +84,8 @@
 									  </div>
 								</header>
 								<span class="image featured"><img src="images/persona.jpg" alt="" /></span>
-								<span class="image featured"><img src="images/did.jpg" alt="" /></span><br> 
+								<span class="imagess" style="display: flex; justify-content: center; align-items: center;">
+									<img src="images/did.jpg" alt="" style="width: 60%;"></span><br>
 								<H1>THE PROBLEM</H1>
 								<p>HBO’s current UI does not provide enough information within the preview sections of its content and lacks diversity in their categories sections. This deters users from browsing/viewing the content within this streaming platform. How can we improve the UI and overall user experience in a simple and organized way to encourage users to engage with this platform more often?
 									That's where we come in!
@@ -93,7 +94,7 @@
 								<h1>THE GOAL</h1>
 								<P>How can we improve HBO’s UI to accommodate user search for new content?</P>
 								<h1>THE PROCESS</h1>
-								<span class="image featured"><img src="images/time.png" alt="" /></span><br> 
+								<span class="image featured" style="display: flex; justify-content: center; align-items: center;" ><img src="images/time.png" alt=""style="width: 60%;" /></span><br> 
 								<p>First off, we aimed to understand our stakeholders, users and existing solutions. To holistically understand the problem space and our user needs, my team member and I created a research plan that incorporated the following methods.<br>
 									<br>
 									For week 1 we decided to divide our research into two phases: a research phase where we understood the context of the problem through an in-depth review and a secondary research phase where we conducted 5 user 1 on 1 interviews. We synthesized the collected data into an affinity map that helped us build a user flow, a user persona, a journey map, and design concepts.</p>
@@ -125,30 +126,30 @@
 								  <p>4.Was there any features you enjoyed?</p>
 								  <p>5. Is there anything you would change or add?</p>
 								  <p>6. Do you have anything else you’d like to share about this topic?</p>
-								  <span class="image featured"><img src="images/notes.jpg" alt="" /></span><br> 
-								  <h1>FINDINGS</h1>
+								  <span class="image featured" style="display: flex; justify-content: center; align-items: center;" ><img src="images/notes.jpg" alt=""style="width: 60%;" /></span><br> 								
+							      <h1>FINDINGS</h1>
 								  <p>Based on the affinity map, we generated the following insights by grouping similar notes from our separate research. My partner was able to complete the affinity map from the research she collected to the left while I completed an affinity map focused on the interviews to the right.</p>
-								  <span class="image featured"><img src="images/affinity.jpg" alt="" /></span><br> 
-								  <h1>USER PERSONA</h1>
+								  <span class="image featured" style="display: flex; justify-content: center; align-items: center;" ><img src="images/affinity.jpg" alt=""style="width: 60%;" /></span><br> 								 
+								   <h1>USER PERSONA</h1>
 								  <p>After creating the affinity map we were able to narrow down our research question to focus on the issues with searching for content. We then created a persona that captured the essence of the users we've researched and interviewed. We also formed a journey map to understand their needs and frustrations.</p>
-								  <span class="image featured"><img src="images/person.png" alt="" /></span><br> 
-								  <h1>JOURNEY MAP</h1><br>
-								  <span class="image featured"><img src="images/journey.png" alt="" /></span><br> 
-								  <h1>USER FLOW</h1>
+								  <span class="image featured" style="display: flex; justify-content: center; align-items: center;" ><img src="images/person.png" alt=""style="width: 60%;" /></span><br> 								
+								    <h1>JOURNEY MAP</h1>
+								  <span class="image featured" style="display: flex; justify-content: center; align-items: center;" ><img src="images/journey.png" alt=""style="width: 60%;" /></span><br> 								
+								    <h1>USER FLOW</h1>
 								  <p>After creating the User Persona and Journey Map a User Flow was created to find any inconsistencies in the search process. The User flow also helps highlight the issue that our persona faces in their journey map above once they search for content.</p>
-								  <span class="image featured"><img src="images/user.png" alt="" /></span><br> 
-								  <h1>CARD SORT</h1>
+								  <span class="image featured" style="display: flex; justify-content: center; align-items: center;" ><img src="images/user.png" alt=""style="width: 30%;" /></span><br> 								 
+								   <h1>CARD SORT</h1>
 								  <p>A Hybrid card sort hosted on Mural was sent out to 5 different participants.  In the card sort there was 34 set categories from HBO and 20 new optional categories. Each participant was asked to put each category they believe that should be used in a separate bucket. There was also 3 unique buckets that contained Add Category, Get Rid of Category, and Group Together. Participants also had the option of creating their own category.</p>
-								  <span class="image featured"><img src="images/card.png" alt="" /></span><br> 
-								  <br><p>Results: Out of the 54 categories 19 Categories were chosen consistently throughout the 5 participants. I only accepted categories that scored at 80% or higher which gave us the list below. I also decided to showcase the 14 rejected categories that scored less than or equal to 20%.</p>
-								  <span class="image featured"><img src="images/list.png" alt="" /></span><br> 
-								  <h1>PROTOTYPE</h1>
+								  <span class="image featured" style="display: flex; justify-content: center; align-items: center;" ><img src="images/card.png" alt=""style="width: 30%;" /></span><br> 								
+								    <br><p>Results: Out of the 54 categories 19 Categories were chosen consistently throughout the 5 participants. I only accepted categories that scored at 80% or higher which gave us the list below. I also decided to showcase the 14 rejected categories that scored less than or equal to 20%.</p>
+									<span class="image featured" ><img src="images/list.png" alt=""style="width: 35%;" /></span><br> 					
+									<h1>PROTOTYPE</h1>
 								  <p>Using our acquired user needs and design implications from our findings, we developed our first iteration of a prototype to answer our research question.
 									How can we improve HBO’s UI to accommodate user search for new content?
 									We created a little mockup sketch to envision what the hover preview would look like. We also took into account one major flaw HBO Max has that involves with their slow load ups. With online research we found that out of all the services HBO Max has a slow load up due to the title card size and fidelity.</p>
-									<span class="image featured"><img src="images/bars.png" alt="" /></span><br> 
+									<span class="image featured" style="display: flex; justify-content: center; align-items: center;" ><img src="images/bars.png" alt=""style="width: 40%;" /></span><br> 									
 									<br> <p>This sizing difference creates a slower load up which can cause issue for HBO's site if there's a poor connection. Since adding pre loaded titles doesn't solve our main question and we have no contact with the software engineering team we can take this into account and limit our preview size.</p>
-									<span class="image featured"><img src="images/example.jpg" alt="" /></span><br> 	
+									<span class="image featured" style="display: flex; justify-content: center; align-items: center;" ><img src="images/example.jpg" alt=""style="width: 60%;" /></span><br> 									
 									<br><p>Amazon prime contains multiple versions of a preview feature that showcase the movies they hold. One version fits the same horizontal title card image that HBO MAX contains. We decided to extend it out 2.5 times its usual size so the users can see the trailer and read the key descriptives HBO has listed on their content page below.</p>
 									<style>
 										ul {
