--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
 						  <div class="title-icon">
 							<i class="fas fa-laptop-code"></i>
 						  </div>
-						  <span>UX Research skills</span>
+						  <span>UX Research Skills</span>
 						</div>
 						<div class="detail-content">
 						  <ul class="pg-list">
@@ -147,13 +147,13 @@
 							  </div>
 							</li>
 							<li>
-							  <span>Information architecture</span>
+							  <span>Information Architecture</span>
 							  <div class="sb-skeleton">
 								<div class="skillbar" style="--pgbar-length: 85%"></div>
 							  </div>
 							</li>
 							<li>
-							  <span>Application Development</span>
+							  <span>App Development</span>
 							  <div class="sb-skeleton">
 								<div class="skillbar" style="--pgbar-length: 80%"></div>
 							  </div>
