--- a/HBO.html
+++ b/HBO.html
@@ -111,10 +111,11 @@
 									<p>2. How often do you use streaming services?</li>
 									<li>
 									  3. Do you prefer any streaming service platforms to watch shows on?
-									  <ul>
+									  <ul> <ol class="customIndent"></ol>>
 										<li>How often do you use this platform?</li>
 										<li>Is there a specific feature from this site you enjoy?</li>
 										<li>Is there anything/feature you wish this site included?</li>
+										</ol>
 									  </ul>
 									</li>
 								  </ol>
