--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 							<section id="Intro">
 								<div class="inner"></div>
 								<header>
-									<h2>Your Favorite UX Researcher's..<hs2>
-									<h2> UX Researcher<h2>
+									<h2>Jack of All Trades,<hs2>
+									<h2> Master of UX Resaerch<h2>
 								</header>
 							</section>
 <!-- Footer -->
