--- a/HBO.html
+++ b/HBO.html
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Jacob's UX Portfolio</a></h1>
+						<h1><a href="home.html">Jacob's UX Portfolio</a></h1>
 						<nav class="links">
 							<ul>
 								<li><a href="https://drive.google.com/file/d/1itsKc6sWVjm6B1sdSbC5BEjxUJ0Ri-jR/view" target="_blank">Resume</a></li>
