--- a/HBO.html
+++ b/HBO.html
@@ -297,7 +297,7 @@
 										}
 									</style>
 									
-									<ul>
+									<blockquote>
 										<li>Hover Preview</li>
 										<li>Play Button</li>
 										<li>Watch Later Button</li>
@@ -307,7 +307,7 @@
 										<li>Movie Page Expands 2.5x</li>
 										<li>Year</li>
 										<li>Content Length</li><br>
-									</ul>
+									</blockquote>
 									<h1>USABILITY STUDY</h1>
 									<p>Upon completing our prototype we then conducted 5 remote think-aloud task-based usability tests. Our main goal with the usability tests was to assess how well users can complete the key task of searching new content in the HBO MAX application.
 										A Paired T Test analysis was ran for the UMUX surveys. The results were significant at P Value = 0.0006 with a Mean Difference of 36.83 between the current design to the prototype. The Confidence interval on the difference of scores goes from 24.29 to 49.38, at most that is almost double the average mean score of the current design at 49.</p>
