--- a/HBO.html
+++ b/HBO.html
@@ -306,7 +306,7 @@
 										<li>Rating</li>
 										<li>Movie Page Expands 2.5x</li>
 										<li>Year</li>
-										<li>Content Length</li><br>
+										<li>Content Length</li>
 									</blockquote>
 									<h1>USABILITY STUDY</h1>
 									<p>Upon completing our prototype we then conducted 5 remote think-aloud task-based usability tests. Our main goal with the usability tests was to assess how well users can complete the key task of searching new content in the HBO MAX application.
