--- a/Canvas.html
+++ b/Canvas.html
@@ -128,14 +128,19 @@
 								<h1>SAMPLING METHOD</h1>
 								<p> Convenience sampling, by using any acquaintances that are available to me. </p>
 								<h1>DESIGN</h1>
+								<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets6.lottiefiles.com/packages/lf20_ub60s1vk.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+
 								<p>Once the subject consents they will complete a questionnaire that involves demographics and experience with the canvas app on Qualtrics. They will then be randomized by sequence to assure the study is counterbalanced.
 									 The subject will either do the old design and then the redesign or vice versa through Figma. They will complete a timed and recorded task of reviewing 3 annotations/comments on the homework page.
 									  Once the timed and recorded task is completed they will complete a different design. In the end, they will be debriefed with a question if they had a preference between the two workflows and why. 
 									  The study will be done remotely through Zoom and screen recorded.</p>
-									  <span class="image featured" style="display: flex; justify-content: center; align-items: center;" ><img src="images/TimeCan.jpg" alt=""style="width: 60%;" /></span><br> 				
+									  <span class="image featured" style="display: flex; justify-content: center; align-items: center;" ><img src="images/TimeCan.jpg" alt=""style="width: 60%;" /></span>				
 									<span class="video" style="display: flex; justify-content: center; align-items: center;" ><video src="videos/CanMov.mov" alt=""style="width: 40%;" controls></video></span><br> 
 								<p> A recording of one of the design workflows participants completed on Figma.</p>
 								<h1>ANALYSIS</h1>
+								<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets3.lottiefiles.com/packages/lf20_m4wmgweb.json"  background="transparent"  speed="1"  style="width: 275px; height: 275px;"  loop  autoplay></lottie-player><br>
 								<p>Hypothesis 1: I ran a within-subjects t-test using a t (Log) Confidence Interval for the time comparison.
 									<br><br>Hypothesis 2: I ran a within-subjects t-test on the UMUX.</p>
 								<h1>OUTCOME</h1>
