--- a/home.html
+++ b/home.html
@@ -40,11 +40,12 @@
 							<header>
 								<div class="title">
 									<h2><a href="HBO.html">HBO MAX Case Study</a></h2>
-									<p>April 2, 2023</p>
+									<p>April 8, 2023</p>
+									<p> #Qualitative #Prototype #JourneyMap #CardSort </p>
 								</div>
 								<div class="meta">
 									<a href="#" class="author">
-									  <img src="images/avatar.jpg" alt="" style="width: 60%;" />
+									  <img src="images/avatar.jpg" alt="" style="width: 70%;" />
 									  <span class="name">Jacob Zacarias</span>
 									</a>
 								  </div>
@@ -63,10 +64,12 @@
 								<div class="title">
 									<h2><a href="Canvas.html">Canvas Case Study</a></h2>
 									<p>December 10, 2022</p>
+									<p> #Quantitative #Prototype #Usability</p>
+									
 								</div>
 								<div class="meta">
 									<a href="#" class="author">
-									  <img src="images/avatar.jpg" alt="" style="width: 60%;" />
+									  <img src="images/avatar.jpg" alt="" style="width: 70%;" />
 									  <span class="name">Jacob Zacarias</span>
 									</a>
 								  </div>
@@ -86,10 +89,11 @@
 									<div class="title">
 										<h2><a href="Tierra.html">Tierra AI Update</a></h2>
 										<p>November 12, 2022</p>
+										<p> #IA #Prototype </p>
 									</div>
 									<div class="meta">
 										<a href="#" class="author">
-										  <img src="images/avatar.jpg" alt="" style="width: 60%;" />
+										  <img src="images/avatar.jpg" alt="" style="width: 70%;" />
 										  <span class="name">Jacob Zacarias</span>
 										</a>
 									  </div>
