--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 							<header>
 								<div class="title">
 									<h2><a href="HBO.html">HBO MAX Case Study</a></h2>
-									<p>April 2, 2023</p>
+									<p>April 8, 2023</p>
+									<p> #Qualitative #Prototype #Journey Map #Card Sort</p>
 								</div>
 								<div class="meta">
 									<a href="#" class="author">
@@ -100,6 +101,7 @@
 								<div class="title">
 									<h2><a href="Canvas.html">Canvas Case Study</a></h2>
 									<p>December 10, 2022</p>
+									<p> #Quantitative #Prototype #Usability</p>
 								</div>
 								<div class="meta">
 									<a href="#" class="author">
@@ -123,6 +125,7 @@
 									<div class="title">
 										<h2><a href="Tierra.html">Tierra AI Update</a></h2>
 										<p>November 12, 2022</p>
+									<p> #IA #Prototype </p>
 									</div>
 									<div class="meta">
 										<a href="#" class="author">
