--- a/HBO.html
+++ b/HBO.html
@@ -114,13 +114,16 @@
 								  <!-- Modal Caption (Image Text) -->
 								  <div id="caption"></div>
 								  
-								</div>								<p>First off, we wanted to take this personal project and treat it as if we were UX researcher's for HBO. We aimed to understand our stakeholders, users and existing solutions. To holistically understand the problem space and our user needs, my team member and I created a research plan that incorporated the following methods.<br>
+								</div>
+								<p>First off, we wanted to take this personal project and treat it as if we were UX researcher's for HBO. We aimed to understand our stakeholders, users and existing solutions. To holistically understand the problem space and our user needs, my team member and I created a research plan that incorporated the following methods.<br>
 									<br>
 									For week 1 we decided to divide our research into two phases: a research phase where we understood the context of the problem through an in-depth review and a secondary research phase where we conducted 5 user 1 on 1 interviews. We synthesized the collected data into an affinity map that helped us build a user flow, a user persona, a journey map, and design concepts.</p>
 								<H1>THE PROBLEM</H1>
 								<p>Based on assumpitons, HBO’s current UI does not provide enough information within the preview sections of its content and lacks diversity in their categories sections. This deters users from browsing/viewing the content within this streaming platform. How can we improve the UI and overall user experience in a simple and organized way to encourage users to engage with this platform more often? Over the next three weeks, Umika and I will run an in-depth research study to understand the users' needs, attitudes, and preferences towards searching in HBO Max's platform.
 								<br><br>That's where we come in!</br></p>
 								<h1>LITERATURE</h1>
+								<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets8.lottiefiles.com/packages/lf20_wCkKRexQ41.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
 								<p> We gathered data online that was focused on google, app reviews, YouTube videos, and surveys. The data collected focused on HBO's quality on different platforms from the phone app to the TV. </p>
 								<h1>SEMI-STRUCTURED INTERVIEW</h1>
 								<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
