--- a/home.html
+++ b/home.html
@@ -25,10 +25,10 @@
 				<!-- Main -->
 					<div id="main">
 				<!-- One -->
-					<section id="about">
-						<header class="major">
-							<h2>Hi There I'm Jacob</h2>
-						</header>
+				<section id="about">
+					<div class="Kontainer">
+						<div class="typed-out">Hi There I'm Jacob</div></div>
+				</header>
 						<p>I’m a current MA UX Research student from Claremont Graduate University. My background consists of behavioral, clinical, and neuroscience research. I provide an assortment of skills from data analysis, interviews, study creation, survey designs, and usability testing...</p>
 						<ul class="actions">
 							<li><a href="about.html" class="button">Learn More</a></li>
