--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 					<div id="main">
 				<!-- One -->
 					<section id="about">
-						<header class="major">
-							<h2>Hi There I'm Jacob</h2>
+							<div class="Kontainer">
+								<div class="typed-out">Hi There I'm Jacob</div></div>
 						</header>
 						<p>I’m a current MA UX Research student from Claremont Graduate University. My background consists of behavioral, clinical, and neuroscience research. I provide an assortment of skills from data analysis, interviews, study creation, survey designs, and usability testing...</p>
 						<ul class="actions">
