--- a/about.html
+++ b/about.html
@@ -40,11 +40,11 @@
 					  <div class="intro-section about">
 						<h1 class="title">About me</h1>
 						<p class="paragraph">
-							I’m a current MA UX Research student from Claremont Graduate University. 
-							My background consists of behavioral, clinical, and neuroscience research.
-							 I provide an assortment of skills from data analysis, interviews, study creation, survey designs, and usability testing. 
-							 <br>  My main focus is in decision making and how I can apply my background in neuroscience and technology to UX Research.
-							 In my free time I love to work out at the gym, play basketball and watch video essays on historic and political issues.</p>
+							I'm a UX Research student with a background in behavioral, clinical, and neuroscience research. 
+							I specialize in decision-making and apply my expertise to UX research. 
+							I excel in data analysis, interviews, study creation, survey design, and usability testing. 
+							Outside of work, I enjoy working out, playing basketball, and exploring thought-provoking 
+							video essays on history and politics.</p>
 
 					  </div>
 					  <div class="intro-section contact">
