--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 							<div class="Kontainer">
 								<div class="typed-out">Hi There I'm Jacob</div></div>
 						</header>
-						<p>I’m a current MA UX Research student from Claremont Graduate University. My background consists of behavioral, clinical, and neuroscience research. I provide an assortment of skills from data analysis, interviews, study creation, survey designs, and usability testing...</p>
+						<p>I am a passionate MA UX Research student from Claremont Graduate University with skills in research methods, 
+							statistical analysis, and programming. Currently, I am interning at UCSD's Design Lab working on VR in healthcare.</p>
 						<ul class="actions">
 							<li><a href="about.html" class="button">Learn More</a></li>
 						</ul>
