--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 								<div class="inner"></div>
 								<header>
 									<h2>Jack of All Trades,<hs2>
-									<h2> Master of UX Resaerch<h2>
+									<h2> Master of UX Research<h2>
 								</header>
 							</section>
 <!-- Footer -->
