--- a/HBO.html
+++ b/HBO.html
@@ -74,7 +74,7 @@
 								<header>
 									<div class="title">
 										<h2><a href="#">HBO Case Study</a></h2>
-										<p>In this student project improvements are made to help users find new content.</p>
+										<p>In this student project, improvements are made to help users find new content.</p>
 									</div>
 									<div class="meta">
 										<a href="#" class="author">
@@ -121,7 +121,13 @@
 									For week 1 we decided to divide our research into two phases: a research phase where we understood the context of the problem through an in-depth review and a secondary research phase where we conducted 5 user 1 on 1 interviews. We synthesized the collected data into an affinity map that helped us build a user flow, a user persona, a journey map, and design concepts.</p>
 								<H1>THE PROBLEM</H1>
 								<p>Based on assumpitons, HBO’s current UI does not provide enough information within the preview sections of its content and lacks diversity in their categories sections. This deters users from browsing/viewing the content within this streaming platform. How can we improve the UI and overall user experience in a simple and organized way to encourage users to engage with this platform more often? Over the next three weeks, Umika and I will run an in-depth research study to understand the users' needs, attitudes, and preferences towards searching in HBO Max's platform.
-								<br><br>That's where we come in!</br></p>
+								<br>
+								<div style="display: flex;">
+									<img class="myImages" id="myImg" src="images/hbofirst.png" alt="" style="width: 40%">
+									<img class="myImages" id="myImg" src="images/hbosecond.png" alt="" style="width: 40%">
+								  </div>	
+								<br>See how there's no trailer for the Creed movie after clicking on the movie.</br></p>
+								</p>
 								<h1>LITERATURE</h1>
 								<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_wCkKRexQ41.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
@@ -152,7 +158,7 @@
 								<p>Once we gathered an array of insights from our research phase, we designed our semi-structured interview to gain more in-depth information about the habits, attitudes, and preferences of searching for new content on HBO Max.
 									We decided to focus on users that have an HBO subscription over users who don't as we wanted to focus on finding the problem that constantly plague the user. We also made sure to bring in users that have multiple streaming services so they can give us an objective outlook on what they prefer in a streaming service. </p>
 									<p> Five 20-minute qualitative interviews with Users that own an HBO subscription:</p>
-									<img class="myImages" id="myImg" src="images/Interview.png" alt="" style="width: 25%">
+									<img class="myImages" id="myImg" src="images/semi.jpg" alt="" style="width: 80%">
 								<br>
 								  <!-- The Modal -->
 								  <div id="myModal" class="modal">
@@ -298,7 +304,7 @@
 									  
 									</div>				<br></br>							
 									<p>This sizing difference creates a slower load up which can cause issue for HBO's site if there's a poor connection. Since adding pre loaded titles doesn't solve our main question and we have no contact with the software engineering team we can take this into account and limit our preview size.</p>
-									<img class="myImages" id="myImg" src="images/example.jpg" alt="" style="width: 50%">
+									<img class="myImages" id="myImg" src="images/example.jpg" alt="" style="width: 70%">
 
 									<!-- The Modal -->
 									<div id="myModal" class="modal">
