--- a/HBO.html
+++ b/HBO.html
@@ -177,7 +177,8 @@
 									<button onclick="window.open('https://docs.google.com/document/d/12P9WYHmH1UbqbiN1PClGxBnp5UxY_--uyt7O7cCZrIs/edit?usp=sharing')">Interview Questions</button>
 						
 								<img class="myImages" id="myImg" src="images/notes.jpg" alt="" style="width: 40%">
-								<br>
+								<p>Check out some of the quotes from the interview above.</p>
+								
 								  <!-- The Modal -->
 								  <div id="myModal" class="modal">
 									<!-- The Close Button -->
