--- a/HBO.html
+++ b/HBO.html
@@ -25,47 +25,6 @@
 								<li><a href="about.html">About</a></li>
 							</ul>
 					</header>
-				<!-- Main1 -->
-					<section id="menu">
-
-						<!-- Search -->
-							<section>
-								<form class="search" method="get" action="#">
-									<input type="text" name="query" placeholder="Search" />
-								</form>
-							</section>
-
-						<!-- Links -->
-							<section>
-								<ul class="links">
-									<li>
-										<a href="#">
-											<h3>Lorem ipsum</h3>
-											<p>Feugiat tempus veroeros dolor</p>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3>Dolor sit amet</h3>
-											<p>Sed vitae justo condimentum</p>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3>Feugiat veroeros</h3>
-											<p>Phasellus sed ultricies mi congue</p>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3>Etiam sed consequat</h3>
-											<p>Porta lectus amet ultricies</p>
-										</a>
-									</li>
-								</ul>
-							</section>
-					</section>
-
 				<!-- main1 -->
 					<div id="main1">
 
@@ -122,10 +81,26 @@
 								<H1>THE PROBLEM</H1>
 								<p>Based on assumpitons, HBO’s current UI does not provide enough information within the preview sections of its content and lacks diversity in their categories sections. This deters users from browsing/viewing the content within this streaming platform. How can we improve the UI and overall user experience in a simple and organized way to encourage users to engage with this platform more often? Over the next three weeks, Umika and I will run an in-depth research study to understand the users' needs, attitudes, and preferences towards searching in HBO Max's platform.
 								<br>
-								<div style="display: flex;">
-									<img class="myImages" id="myImg" src="images/hbofirst.png" alt="" style="width: 40%">
-									<img class="myImages" id="myImg" src="images/hbosecond.png" alt="" style="width: 40%">
-								  </div>	
+								<section id="slideshow">
+									<div class="slideshow-container">
+										<div class="slide">
+										  <img class="myImages" src="images/hbofirst.png" alt="" style="width: 85%">
+										</div>
+										<div class="slide">
+										  <img class="myImages" src="images/hbosecond.png" alt="" style="width: 85%">
+										</div>
+									  
+										<!-- Navigation arrows -->
+										<a class="prev">&#10094;</a>
+										<a class="next">&#10095;</a>
+									  
+										<!-- Navigation bubbles -->
+										<div class="navigation">
+										  <span class="dot"></span>
+										  <span class="dot"></span>
+										</div>
+									  </div>
+								  </section>	
 								<br>See how there's no trailer for the Creed movie after clicking on the movie.</br></p>
 								</p>
 								<h1>LITERATURE</h1>
@@ -133,8 +108,8 @@
 <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_wCkKRexQ41.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
 								<p> We gathered data online that was focused on google, app reviews, YouTube videos, and surveys. The data collected focused on HBO's quality on different platforms from the phone app to the TV. </p>
 								<div style="display: flex;">
-									<img class="myImages" id="myImg" src="images/ratings.png" alt="" style="width: 40%">
-									<img class="myImages" id="myImg" src="images/VS.png" alt="" style="width: 40%">
+									<img class="myImages" id="myImg" src="images/ratings.png" alt="" style="width: 35%">
+									<img class="myImages" id="myImg" src="images/VS.png" alt="" style="width: 35%">
 								  </div><br>
 
 								<!-- The Modal -->
