--- a/HBO.html
+++ b/HBO.html
@@ -101,7 +101,7 @@
 										</div>
 									  </div>
 								  </section>	
-								<br>See how there's no trailer for the Creed movie after clicking on the movie.</br></p>
+								<br>See how there's no trailer for the Creed movie after clicking on the movie. The user has to take an extra step to read or click on the movie to know if theyre interested. Scroll down to see how our research and interviews back up our assumption.</br></p>
 								</p>
 								<h1>LITERATURE</h1>
 								<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
