--- a/about.html
+++ b/about.html
@@ -84,6 +84,15 @@
 							  <span>jacobrz030@gmail.com</span>
 							</a>
 						</div> 
+					</div>
+					<div class="intro-section follow">
+					  <h1 class="title">Resume</h1>
+					  <div class="info-section link">
+						<i class="fa-solid fa-file"></i>
+						<a target="_blank" rel="author" href="https://drive.google.com/file/d/1itsKc6sWVjm6B1sdSbC5BEjxUJ0Ri-jR/view">
+						  <span>Click Me</span>
+						</a>
+					  </div>
 					  </div>
 					</div>
 					<div class="detail">
