--- a/Canvas.html
+++ b/Canvas.html
@@ -25,18 +25,6 @@
 								<li><a href="about.html">About</a></li>
 							</ul>
 					</header>
-				<!-- Main -->
-					<section id="menu">
-
-						<!-- Actions -->
-							<section>
-								<ul class="actions stacked">
-									<li><a href="#" class="button large fit">Log In</a></li>
-								</ul>
-							</section>
-
-					</section>
-
 				<!-- main1 -->
 					<div id="main1">
 
@@ -54,6 +42,7 @@
 										</a>
 									  </div>
 								</header>
+								
 							<!-- Slideshow -->
 							<img class="myImages" id="myImg" src="images/orgcan.jpg" alt="" style="width:100%">
 
@@ -75,7 +64,7 @@
 	
 	<!-- Modal Caption (Image Text) -->
 	<div id="caption"></div>
-</div>						<br></<h1>RESEARCH QUESTIONS</h1>
+</div>						<br> <h1>RESEARCH QUESTIONS</h1>
 								<P>I conducted a usability test that will evaluate using the summative methods to compare the task on time of the redesigned workflow to the original workflow.</P>
 								<h1>THE PROCESS</h1>
 								<p>Question 1: Is there a significant difference in Time on Task between the redesign and the original design?<br>
