--- a/HBO.html
+++ b/HBO.html
@@ -42,7 +42,9 @@
 										</a>
 									  </div>
 								</header>
-								<img class="myImages" id="myImg" src="images/proto.png" alt="" style=" padding-top: 0px; width: 47%">
+								<video style="width: 100%;" autoplay muted loop>
+									<source src="videos/HBOmov.mov" type="video/mp4">
+								</video><br><br>
 
 								<!-- The Modal -->
 								<div id="myModal" class="modal">
