--- a/HBO.html
+++ b/HBO.html
@@ -184,14 +184,42 @@
 									<h1>QUALITATIVE RESULTS</h1>
 									<p>Out of the 5 participants that did the randomized within study they stated they preferred the new design in the exit questions. 
 										All participants gave recommendations to the current and prototype designs.
-										Current Design Recommendations that were constant between participants:
+										<head>
+											<title>Design Recommendations</title>
+											<style>
+												/* Style the columns */
+												.column {
+													float: left;
+													width: 50%; /* Set each column to take half of the container width */
+													padding: 10px;
+												}
 										
-												 - Hover Preview
-												 - A Bigger Trailer Button
-										Prototype Recommendations that were constant between participants:
-										
-												 - Hover Preview Limit
-												 - Shorter Clips instead of a trailer</p>
+												/* Clear floats after the columns */
+												.row::after {
+													content: "";
+													clear: both;
+													display: table;
+												}
+											</style>
+										</head>
+										<body>
+											<div class="row">
+												<div class="column">
+													<h2>Current Design Recommendations</h2>
+													<p>
+														- Hover Preview<br>
+														- A Bigger Trailer Button
+													</p>
+												</div>
+												<div class="column">
+													<h2>Prototype Recommendations</h2>
+													<p>
+														- Hover Preview Limit<br>
+														- Shorter Clips instead of a trailer
+													</p>
+												</div>
+											</div>
+										</body>
 									<h1>REFLECTION</h1>
 									<p>With the recommendations and the UMUX scores we were able to decide that the prototype did not need a second iteration. Since the recommendations we received in our qualitative interviews can be applied for a better user experience we also had to be aware that more research would have to be done. The hover preview limit and shorter clips recommendation would be a whole study in itself. </p>
 									<head>
