--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 							<ul>
 								<li><a href="https://drive.google.com/file/d/1itsKc6sWVjm6B1sdSbC5BEjxUJ0Ri-jR/view" target="_blank">Resume</a></li>
 								<li><a href="about.html">About</a></li>
+								<li><a href="recommend.html">ML Projects</a></li>
 							</ul>
 					</header>
 				<!-- Main -->
