--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
 						<div class="typed-out">Hi There I'm Jacob</div></div>
 				</header>
 						<p>I am a passionate MA UX Research student from Claremont Graduate University with skills in research methods, 
-							statistical analysis, and programming. Currently, I am interning at UCSD's Design Lab working on VR in healthcare.</p>
+							statistical analysis, and programming. Currently focused on developing a dream journal app in hopes of obtaining the biggest dream database in the world with the power of UX.</p>
 						<ul class="actions">
 							<li><a href="about.html" class="button">Learn More</a></li>
 						</ul>
