--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</head>
 	<body class="is-preload">
 		<div id="preloader">
-			<lottie-player src="https://assets7.lottiefiles.com/packages/lf20_mrg9xhbm.json" mode="bounce" background="rgba(0, 0, 0, 0)" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+			<lottie-player src="https://lottie.host/f2f4ab21-bfec-44d1-bf48-2889182e58fb/ZBDVahVGAj.json" background="rgba(0, 0, 0, 0)" speed="1" style="width: 600px; height: 600px;" loop autoplay></lottie-player>
 		</div>
 	
 		<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
